# CapsuleCore-StatusQ-cpu

./: CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
src/cc/statusq/cpu/: __init__.py
src/cc/statusq/cpu/capsule/: PsutilCPUProvider.py
src/cc/statusq/cpu/core/: CPUEvent.py  StatusqCPU.py  __init__.py
src/cc_statusq_cpu/capsule/: CSVObserver.py  ConsoleObserver.py  ConsoleSubscriber.py
src/cc_statusq_cpu/core/: CPUEvent.py  CPUEventBus.py  StatusqCPU.py  __init__.py
src/core_cpu_monitor/: __init__.py  domain.py
tests/: conftest.py  test_CPUEvent.py  test_CPUEventBus.py  test_CPUEventSubscriber.py  test_CPUObserver.py  test_CPUProvider.py  test_CPUStatus.py  test_ConsoleSubscriber.py  test_PsutilCPUProvider.py  test_StatusqCPU_run_continuous_monitoring.py  test_StatusqCPU_run_single_check.py  test_unit.py
